Successfully established connection with backend

--- a/src/app/canvas/components/table-general/table-general.component.html
+++ b/src/app/canvas/components/table-general/table-general.component.html
@@ -1,1 +1,7 @@
-<p>table-general works!</p>
+<div>
+    <p>table-general works!</p>
+    <p>
+        for testing purpose we will receive following data from server:
+    </p>
+    <h2>{{ testObject ? testObject.data : "waiting a moment" }} </h2>
+</div>
