Changed angular.json for netlify

--- a/src/app/canvas/components/table-general/table-general.component.html
+++ b/src/app/canvas/components/table-general/table-general.component.html
@@ -1,7 +1,11 @@
 <div>
     <p>table-general works!</p>
-    <p>
+
+
+<!--     <p>
         for testing purpose we will receive following data from server:
     </p>
-    <h2>{{ testObject ? testObject.data : "waiting a moment" }} </h2>
+    <h2>{{ testObject ? testObject.data : "waiting a moment" }} </h2> -->
+
+    
 </div>
