--- a/src/app/canvas/components/table-general/table-general.component.html
+++ b/src/app/canvas/components/table-general/table-general.component.html
@@ -1,11 +1,8 @@
 <div>
     <p>table-general works!</p>
 
-
-<!--     <p>
-        for testing purpose we will receive following data from server:
-    </p>
-    <h2>{{ testObject ? testObject.data : "waiting a moment" }} </h2> -->
-
+    <div *ngFor="let canvas of canvases">
+        {{canvas.name}}
+    </div>
     
 </div>
