Adjusted footer and added basic table-grid

--- a/src/app/canvas/components/canvas/canvas.component.html
+++ b/src/app/canvas/components/canvas/canvas.component.html
@@ -1,8 +1,11 @@
-<p>new canvas-main-page works</p>
+table general:
+<div id="wrapper">
+    <div id="left">
+        <app-table-general></app-table-general>
+    </div>
+    <div id="right">
 
-<app-table-general></app-table-general>
-
-<p>start of canvas</p>
+    </div>
+</div>
+distance matrix:
 <app-distance-matrix></app-distance-matrix>
-
-<p>end of canvas</p>
