--- a/src/app/shared/layout/components/footer/footer.component.html
+++ b/src/app/shared/layout/components/footer/footer.component.html
@@ -1,1 +1,73 @@
-<p>footer works!</p>
+<footer>
+    <div id="wrapper" class="footer-content">
+        <div id="left">
+            <p class="bigger-font">We help you to express your ideas for your future startup</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deserunt quidem mollitia quas, modi voluptas pariatur, excepturi aut dolorem voluptate quis laboriosam cupiditate dignissimos nobis. Recusandae minus earum eum deserunt eveniet.</p>
+        </div>
+        <div id="right" class="center-button">
+            <button mat-flat-button class="adjust-button">Basic</button>
+        </div>
+    </div>
+</footer>
+<!-- <div id="wrapper">
+    <div id="left2">
+        <div>
+            <img class="wrapper2" src="assets/Logo_Charite.svg" height="80">
+        </div>
+    </div>
+    <div id="right2">
+        <div>
+            <img class="wrapper2" src="assets/Logo_HTW_Berlin.svg" height="80">
+        </div>
+    </div>
+</div> -->
+
+<div>
+    <div class="test1">
+        <div id="wrapper">
+            <div id="left2">
+                <div>
+                    <img class="wrapper2" src="assets/Logo_Charite.svg" height="80">
+                </div>
+            </div>
+            <div id="right2">
+                <div>
+                    <img class="wrapper2" src="assets/Logo_HTW_Berlin.svg" height="100">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="wrapper3">
+    <ul>
+        <li class="footer-link-items">
+            <a routerLink="/home" class="footer-links">Home</a>
+        </li>
+        <li class="footer-link-items">
+            <a routerLink="/canvas/overview" class="footer-links">Arbeitsfläche</a>
+        </li>
+        <li class="footer-link-items">
+            <a routerLink="/account" class="footer-links">Features</a>
+        </li>
+        <li class="footer-link-items">
+            <a routerLink="/about" class="footer-links">About Us</a>
+        </li>
+        <li class="footer-link-items">
+            <a routerLink="/impressum" class="footer-links">Impressum</a>
+        </li>
+        <li class="footer-link-items">
+            <a routerLink="/auth/login" class="footer-links">Sign in</a>
+        </li>
+        <li class="footer-link-items">
+            <a routerLink="/auth/register" class="footer-links">Sign up</a>
+        </li>
+    </ul>
+</div>
+
+<div class="wrapper3">
+    <p class="copyright-text"> &copy; Copyright 2020 HealthCareCareer2go. All rights reserved.<p>
+</div>
+
+
