--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-layout-header></app-layout-header>
 
-<router-outlet></router-outlet>
-
-<app-layout-footer></app-layout-footer>
+<!-- processes router-outlet -->
+<app-layout-sidenav></app-layout-sidenav>
