--- a/src/theme.scss
+++ b/src/theme.scss
@@ -27,7 +27,9 @@ $app-theme: mat-light-theme((color: (primary: $app-primary, accent: $app-accent,
 // that you are using.
 @include angular-material-theme($app-theme);
 
-
+footer {
+    background-color: mat-color($app-primary, default);
+}
 
 // $my-app-primary: mat-palette($mat-blue-grey);
 // $my-app-accent:  mat-palette($mat-pink, 500, 900, A100);
