--- a/src/app/canvas/components/canvas/canvas.component.html
+++ b/src/app/canvas/components/canvas/canvas.component.html
@@ -1,11 +1,18 @@
-table general:
-<div id="wrapper">
-    <div id="left">
-        <app-table-general></app-table-general>
-    </div>
-    <div id="right">
-
+<div>
+    <h3>Business Model Canvas</h3>
+    <div class="top-content-container">
+        <div class="top-content-container-items">
+            <app-table-general></app-table-general>
+        </div>
+        <div class="top-content-container-items">
+            <div class="next-to-canvas-container">
+                <div class="next-to-canvas-container-item">
+                    <app-business-model-picker></app-business-model-picker>
+                </div>
+                <div class="next-to-canvas-container-item">
+                    <app-distance-matrix></app-distance-matrix>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-distance matrix:
-<app-distance-matrix></app-distance-matrix>
