--- a/src/app/canvas/components/distance-matrix/distance-matrix.component.html
+++ b/src/app/canvas/components/distance-matrix/distance-matrix.component.html
@@ -1,3 +1,6 @@
-<div id="div-distance-matrix">
-    <canvas id="distance-matrix"></canvas>
+<div>
+    <h3>distance matrix</h3>
+    <div id="div-distance-matrix">
+        <canvas id="distance-matrix"></canvas>
+    </div>
 </div>
