Adjusted frontend-user-workspace

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-layout-header></app-layout-header>
 
-<!-- processes router-outlet -->
+<!-- app-layout-sidenav processes router-outlet -->
 <app-layout-sidenav></app-layout-sidenav>
