--- a/src/app/canvas/components/business-model-card/business-model-card.component.html
+++ b/src/app/canvas/components/business-model-card/business-model-card.component.html
@@ -4,7 +4,7 @@
 
 
         <div class="canvas-card-header">
-            BusinessModelName
+            {{pattern.name}}
             <hr>
         </div>
 
