--- a/src/app/canvas/components/table-general/table-general.component.html
+++ b/src/app/canvas/components/table-general/table-general.component.html
@@ -33,7 +33,7 @@
 
 
         <div class="canvas-container">
-            <app-canvas-card *ngFor="let canvasCell of canvas" [canvasCell] = "canvasCell"></app-canvas-card>
+            <app-canvas-card *ngFor="let canvasCellView of canvasCells" [canvasCell] = "canvasCellView"></app-canvas-card>
         </div>
 
 
