--- a/src/app/projects/components/projects-picker-card/projects-picker-card.component.html
+++ b/src/app/projects/components/projects-picker-card/projects-picker-card.component.html
@@ -1,4 +1,4 @@
-<div class="projects-picker-card">
+<div class="projects-picker-card" routerLink="/projects/{{project.id}}">
 
     <div class="projects-picker-card-container">
 
