--- a/src/app/shared/layout/components/sidenav/sidenav.component.html
+++ b/src/app/shared/layout/components/sidenav/sidenav.component.html
@@ -39,7 +39,7 @@
         <span>Your Workspace</span>
       </a>
       <mat-nav-list class="margin-left">
-        <a mat-list-item routerLink="/projects/overview">
+        <a mat-list-item routerLink="/projects">
           <mat-icon class="material-icons-outlined nav-icon">work_outline</mat-icon>
           <span>Projects</span>
         </a>
