--- a/src/app/canvas/components/business-model-picker/business-model-picker.component.html
+++ b/src/app/canvas/components/business-model-picker/business-model-picker.component.html
@@ -2,8 +2,8 @@
     <h3>Select Your next Business Model</h3>
 
     <div class="selector-container">
-        <div *ngFor="let _ of [1,2,3,4,5,6,7,12,13,14,15,12,13,14,15,12,13,14,15,12,13,14,15,12,13,14,15,12,13,14,15,12,13,14,15,12,13,14,15,12,13,14,15]" class="selector-item">
-            <app-business-model-card ></app-business-model-card>
+        <div *ngFor="let pattern of patterns" class="selector-item">
+            <app-business-model-card [pattern]="pattern"></app-business-model-card>
         </div>
     </div>
 
